--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 			<div class="mainDetails">
 				<div id="headshot">
-					<img src="image/deni1.JPG" alt="Deni's Photo"/>	<!--Dinisi saya menyisipakan image/gambar diri-->
+					<img src="deni1.jpg" alt="Deni's Photo"/>	<!--Dinisi saya menyisipakan image/gambar diri-->
 				</div>
 	
 				<div id="name">
