--- a/index.html
+++ b/index.html
@@ -257,16 +257,16 @@
 					<div class="sectionContent">
 						<article>
 							<a href="https://github.com/deniwidi/deniwidi.git" target="_blank"> <!--Disini saya menggunakan tag link-->
-								<img src="github.png" height="50px">	<!--Disini saya menggunakan tag image, sebanyak 4 gambar-->
+								<img src="image/github.png" height="50px">	<!--Disini saya menggunakan tag image, sebanyak 4 gambar-->
 							</a>
 							<a href="https://www.instagram.com/deniwidi" target="_blank">
-								<img src="instagram.png" height="50px">
+								<img src="image/instagram.png" height="50px">
 							</a>	
 							<a href="https://www.facebook.com/deni.alfian1" target="_blank">
-								<img src="facebook.png" height="50px">
+								<img src="image/facebook.png" height="50px">
 							</a>	
 							<a href="https://www.youtube.com/@alvianox" target="_blank">
-								<img src="youtube.png" height="50px">
+								<img src="image/youtube.png" height="50px">
 							</a>						
 						</article>
 					</div>
