--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 								<li>Hiking</li> <!--Disini saya menggunakan tag list-->
 								<li>Gaming</li>
 								<li>Drawing</li>
-								<li>Linten to Music</li>
+								<li>Listen to Music</li>
 							</ol>
 						</article>
 					</div>
